# fraktal-py

./: .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  setup.py  update-fraktal.sh
fraktal/: CMakeLists.txt  fraktal.cpp  fraktal.hpp
fraktal_py/: fraktal_py.cpp
tests/: test.py
webpage/: __init__.py
webpage/templates/: fern.html  index.html  other.html
